--- a/app/src/main/res/layout/fetch_data.xml
+++ b/app/src/main/res/layout/fetch_data.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/webView2"
+        android:id="@+id/webView"
         android:background="#3b99eb"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/myProgressBar"
@@ -32,10 +32,10 @@
         android:background="#4f4343"
         android:progressBackgroundTint="#f7f314"
         android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_alignStart="@+id/textView3"
-        android:layout_alignRight="@+id/textView3"
-        android:layout_alignEnd="@+id/textView3"
+        android:layout_alignLeft="@+id/titleText"
+        android:layout_alignStart="@+id/titleText"
+        android:layout_alignRight="@+id/titleText"
+        android:layout_alignEnd="@+id/titleText"
         android:progressTint="#2ea00a" />
 
     <TextView
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Downloading Files"
-        android:id="@+id/textView3"
+        android:id="@+id/titleText"
         android:singleLine="true"
         android:textColor="#fff"
         android:layout_alignParentTop="true"
@@ -58,6 +58,6 @@
         android:id="@+id/textView4"
         android:textColor="#fff"
         android:singleLine="true"
-        android:layout_below="@+id/textView3"
+        android:layout_below="@+id/titleText"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
