--- a/app/src/main/res/layout/welcome_screen.xml
+++ b/app/src/main/res/layout/welcome_screen.xml
@@ -19,7 +19,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_gravity="center_vertical"
-    android:background="#4932bb"
+    android:background="#acced0"
     android:orientation="vertical"
     android:weightSum="1">
 
@@ -31,23 +31,38 @@
 
         <LinearLayout
             android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="#36affa"
+            android:gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="TrustPal"
+                android:id="@+id/textView40"
+                android:textColor="#ffffff"
+                android:textIsSelectable="false"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:paddingTop="20dp"
+            android:paddingTop="100dp"
             android:paddingBottom="10dp"
             android:id="@+id/layout1">
 
-            <Button
-                        android:id="@+id/getInvitableFriends"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                android:ellipsize="end"
-                        android:textColor="#fff"
-                android:layout_alignParentBottom="true"
-                android:layout_toLeftOf="@+id/login_button"
-                android:layout_toStartOf="@+id/login_button"
-                android:layout_marginTop="20px" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Are You a Safe Facebook User"
+                android:id="@+id/textView33"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
@@ -60,14 +75,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Please Login First"
-                android:id="@+id/welcome"
-                android:textColor="#ffffff"
-                android:gravity="center"
-                android:padding="10dp"
-                android:layout_gravity="center"
-                android:textSize="25sp" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="OR"
+                android:id="@+id/textView38"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
@@ -78,29 +89,28 @@
             android:layout_gravity="center"
             android:padding="5dp">
 
-            <ImageView
-                android:layout_width="250dp"
-                android:layout_height="250dp"
-                android:id="@+id/imageView12"
-                android:background="@drawable/trustpal"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="-20px" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Can Your Friends Abuse You?"
+                android:id="@+id/textView39"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:paddingTop="20dp">
 
-            <com.facebook.login.widget.LoginButton
-                        android:id="@+id/login_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true" />
+            <ImageView
+                android:layout_width="160dp"
+                android:layout_height="60dp"
+                android:id="@+id/next"
+                android:background="@drawable/start"
+                android:clickable="true" />
         </LinearLayout>
 
     </LinearLayout>
