--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,65 +6,14 @@ android:paddingRight="@dimen/activity_horizontal_margin"
 android:paddingTop="@dimen/activity_vertical_margin"
 android:paddingBottom="@dimen/activity_vertical_margin"
 tools:context="com.fiu_CaSPR.Sajib.TrustPal.FetchData"
-android:background="#1f1e51"
-android:clickable="false">
+    android:clickable="false">
 
 <WebView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/webView"
-    android:background="#3b99eb"
     android:layout_alignParentTop="true"
-    android:layout_toRightOf="@+id/myProgressBar"
-    android:layout_alignRight="@+id/myProgressBar"
-    android:layout_alignEnd="@+id/myProgressBar"></WebView>
-
-<ProgressBar
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/myProgressBar"
-    style="@android:style/Widget.ProgressBar.Horizontal"
-    android:indeterminate="false"
-    android:max="100"
-    android:minHeight="20dp"
-    android:minWidth="200dp"
-    android:progress="1"
-    android:background="#4f4343"
-    android:progressBackgroundTint="#f7f314"
-    android:progressTint="#2ea00a"
-    android:layout_alignBottom="@+id/webView"
-    android:layout_centerHorizontal="true"
-    android:layout_marginBottom="118dp" />
-
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textAppearance="?android:attr/textAppearanceMedium"
-    android:text="Please have patience..."
-    android:id="@+id/textView4"
-    android:textColor="#fff"
-    android:layout_below="@+id/imageView"
-    android:layout_centerHorizontal="true" />
-
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textAppearance="?android:attr/textAppearanceLarge"
-    android:text="Login Successful"
-    android:id="@+id/textView7"
-    android:textColor="#b8fa70"
-    android:layout_alignParentTop="true"
-    android:layout_centerHorizontal="true"
-    android:layout_marginTop="61dp"
-    android:gravity="center" />
-
-<ImageView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/imageView"
-    android:background="@drawable/url"
-    android:layout_centerHorizontal="true"
-    android:layout_below="@+id/textView7" />
+    android:layout_centerHorizontal="true"></WebView>
 
 </RelativeLayout>
