--- a/app/src/main/res/layout/activity_upload_to_server.xml
+++ b/app/src/main/res/layout/activity_upload_to_server.xml
@@ -4,24 +4,37 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:gravity="center_horizontal"
-    android:background="#936de5">
+    android:background="#4932bb">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="You have sucessfully answered all the friends. It&apos;s time to see your result"
+        android:text="You have sucessfully evaluated 20 of your friends."
         android:id="@+id/textView10"
         android:layout_gravity="center"
         android:gravity="center"
-        android:paddingTop="100dp"
-        android:textColor="#ffffff" />
+        android:paddingTop="80dp"
+        android:textColor="#ffffff"
+        android:textSize="23sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Let&apos;s see your results!"
+        android:id="@+id/textView11"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:paddingTop="50dp"
+        android:textColor="#ffffff"
+        android:textSize="23sp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Next"
         android:id="@+id/uploadButton"
-        android:layout_marginTop="200dp" />
+        android:layout_marginTop="250dp" />
 
 </LinearLayout>
