--- a/app/src/main/res/layout/consent.xml
+++ b/app/src/main/res/layout/consent.xml
@@ -71,7 +71,8 @@
                 android:layout_height="wrap_content"
                 android:text="Agree"
                 android:id="@+id/agree"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:textStyle="bold" />
         </LinearLayout>
 
     </LinearLayout>
