--- a/app/src/main/res/layout/friend_result.xml
+++ b/app/src/main/res/layout/friend_result.xml
@@ -19,7 +19,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_gravity="center_vertical"
-    android:background="#e3e1cf"
+    android:background="#4932bb"
     android:orientation="vertical"
     android:weightSum="1">
 
@@ -34,7 +34,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:background="#f0ab4e">
+            android:background="#fee901"
+            android:id="@+id/unsafeDiv">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -42,7 +43,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="This friend might be unsafe"
                 android:id="@+id/safeText"
-                android:textColor="#ffffff"
+                android:textColor="#b50f15"
                 android:textSize="19dp"
                 android:layout_weight="8"
                 android:gravity="center" />
@@ -70,16 +71,18 @@
             android:id="@+id/layout1"
             android:paddingLeft="60dp">
 
-            <ImageView
-                android:layout_width="140dp"
-                android:layout_height="140dp"
-                android:id="@+id/propicimageview"
-                android:background="@drawable/border" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="142dp"
+                android:layout_height="142dp">
 
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:id="@+id/safeIcon" />
+                <ImageView
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
+                    android:id="@+id/propicimageview"
+                    android:background="#fe0101"
+                    android:padding="2dp" />
+            </LinearLayout>
 
             <RelativeLayout
                 android:orientation="horizontal"
@@ -107,9 +110,10 @@
                     android:layout_centerInParent="true"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="75%"
-                    android:textColor="#3767eb"
+                    android:textColor="#ffffff"
                     android:textSize="30sp" />
             </RelativeLayout>
+
         </LinearLayout>
 
         <LinearLayout
@@ -125,7 +129,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Name of friend"
                 android:id="@+id/usernamenew"
-                android:textColor="#915e13" />
+                android:textColor="#ffffff" />
         </LinearLayout>
 
         <LinearLayout
@@ -135,44 +139,7 @@
             android:gravity="left|center"
             android:layout_gravity="center"
             android:padding="10dp"
-            android:background="#ffffff">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="* You don&apos;t have enough interaction to trust this friend"
-                android:id="@+id/actionText12"
-                android:phoneNumber="false"
-                android:textSize="13sp"
-                android:textColor="#FFEE1111" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="* This friend may abuse a picture that you upload"
-                android:id="@+id/actionText3"
-                android:textColor="#FFEE1111"
-                android:textSize="13sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="* This friend may abuse a status that you post"
-                android:id="@+id/actionText4"
-                android:textSize="13sp"
-                android:textColor="#FFEE1111" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="* This friend may post offensive, misleading, false or potentially malicious content"
-                android:id="@+id/actionText5"
-                android:textSize="13sp"
-                android:textColor="#FFEE1111" />
+            android:background="#326a8c">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -182,10 +149,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Your answers reveal that you should “Unfriend” this friend - Make  sure this friend d no longer exists in your friendlist."
+                    android:text="Your answers reveal that you should “Unfriend” this friend - Make  sure this friend no longer exists in your friendlist."
                     android:id="@+id/unfriendText"
                     android:textSize="13sp"
-                    android:textColor="#a20cf4" />
+                    android:textColor="#ffffff" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -194,7 +161,7 @@
                     android:text="Your answers reveal that you should “Restrict” this friend - Make  sure this friend will not be able to see the photos or status updates that you post. "
                     android:id="@+id/restrictText"
                     android:textSize="13sp"
-                    android:textColor="#a20cf4" />
+                    android:textColor="#ffffff" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -203,8 +170,49 @@
                     android:text="Your answers reveal that you should “Unfollow” this friend - Make  sure you don&apos;t get any potentially harmful facebook content from this friend."
                     android:id="@+id/unfollowText"
                     android:textSize="13sp"
-                    android:textColor="#a20cf4" />
+                    android:textColor="#ffffff" />
             </RelativeLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="* You never seem to interact with this friend"
+                android:id="@+id/actionText12"
+                android:phoneNumber="false"
+                android:textSize="13sp"
+                android:textColor="#f6fe01"
+                android:paddingLeft="10dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="* This friend may abuse a picture that you upload"
+                android:id="@+id/actionText3"
+                android:textColor="#f6fe01"
+                android:textSize="13sp"
+                android:paddingLeft="10dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="* This friend may abuse a status that you post"
+                android:id="@+id/actionText4"
+                android:textSize="13sp"
+                android:textColor="#f6fe01"
+                android:paddingLeft="10dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="* This friend may post unsafe or offensive content"
+                android:id="@+id/actionText5"
+                android:textSize="13sp"
+                android:textColor="#f6fe01"
+                android:paddingLeft="10dp" />
 
         </LinearLayout>
 
@@ -222,7 +230,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Please consider the following action"
                 android:id="@+id/actionText"
-                android:textColor="#346a0e"
+                android:textColor="#ffffff"
                 android:gravity="center_horizontal" />
 
 
@@ -251,7 +259,8 @@
                 android:layout_height="wrap_content"
                 android:text="Unfriend"
                 android:id="@+id/action"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:textStyle="bold" />
         </LinearLayout>
 
     </LinearLayout>
